# hackernews-cli

./: Cargo.toml  README.md  rust-toolchain.toml
.codex/skills/hn-tui-manual-validation/: SKILL.md
.codex/skills/hn-tui-manual-validation/agents/: openai.yaml
.github/workflows/: rust.yml
src/: app.rs  child_responses.rs  event.rs  hn_cli_service.rs  hn_cli_service_tests.rs  hn_client.rs  lib.rs  main.rs  main_tests.rs  story_responses.rs  terminal_session.rs  time_utils.rs  url_open.rs  view_scope.rs
src/app/: app_tests.rs  comment_view_state.rs  comment_view_state_tests.rs  view_status.rs
src/ui/: comments.rs  mod.rs  stories.rs  ui_tests.rs  widgets.rs
