[package]
name = "hn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hn"
path = "src/main.rs"

[lib]
name = "hn_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
async-trait = "0.1.57"
chrono = "0.4.22"
crossterm = "0.28"
futures = "0.3.23"
html-escape = "0.2"
mockall = "0.12.1"
open = "5"
ratatui = "0.29"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
