[package]
name = "hn"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "hn"
path = "src/main.rs"

[lib]
name = "hn_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
async-trait = "0.1.57"
chrono = "0.4.22"
crossterm = "0.28"
futures = "0.3.23"
html-escape = "0.2"
icu_collections = { version = ">=2.0.0, <2.1.0", default-features = false }
icu_locale_core = { version = ">=2.0.0, <2.1.0", default-features = false }
icu_normalizer = { version = ">=2.0.0, <2.1.0", default-features = false }
icu_normalizer_data = { version = ">=2.0.0, <2.1.0", default-features = false }
icu_properties = { version = ">=2.0.0, <2.1.0", default-features = false }
icu_properties_data = { version = ">=2.0.0, <2.1.0", default-features = false }
icu_provider = { version = ">=2.0.0, <2.1.0", default-features = false }
mockall = "0.12.1"
open = "5"
ratatui = "0.29"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
textwrap = "0.16"
tokio = { version = "1.20.1", features = ["full"] }
writeable = { version = "0.6", features = ["alloc"] }
